{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 1009,
  "lineage": "cd710fcf-e085-ffb2-44a0-d710263f62be",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ceph_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3300"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-29T08:12:08.153-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sys-admin-project-402817/global/firewalls/ceph-cluster-firewall",
            "log_config": [],
            "name": "ceph-cluster-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/networks/my-vpc",
            "priority": 1000,
            "project": "sys-admin-project-402817",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/firewalls/ceph-cluster-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ceph-nodes"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ceph_dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-29T08:12:07.830-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sys-admin-project-402817/global/firewalls/ceph-cashboard-firewall",
            "log_config": [],
            "name": "ceph-cashboard-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/networks/my-vpc",
            "priority": 1000,
            "project": "sys-admin-project-402817",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/firewalls/ceph-cashboard-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ceph-dashboard"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sys-admin-project-402817/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "sys-admin-project-402817",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-29T08:12:08.306-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/subnetworks/my-subnetwork",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/networks/my-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sys-admin-project-402817",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/my-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backup",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "backup_reserved_external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.38.39.86",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-11-29T08:11:45.690-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/backup-reserved-external-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "backup-reserved-external-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/backup-reserved-external-ip"
          }
        }
      ]
    },
    {
      "module": "module.backup",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "backup_reserved_internal_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.132.0.36",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-11-29T08:11:56.666-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/backup-reserved-internal-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "backup-reserved-internal-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/backup-reserved-internal-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default"
          }
        }
      ]
    },
    {
      "module": "module.backup",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "backup_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/disks/ceph-backup-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-backup-server",
            "instance_id": "2745308678885923895",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "zGqVllLhp8Q=",
            "name": "ceph-backup-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.38.39.86",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/networks/default",
                "network_ip": "10.132.0.36",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "sys-admin-project-402817"
              }
            ],
            "project": "sys-admin-project-402817",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-backup-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.backup.google_compute_address.backup_reserved_external_ip",
            "module.backup.google_compute_address.backup_reserved_internal_ip"
          ]
        }
      ]
    },
    {
      "module": "module.mgr",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mgr_reserved_external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.199.12.216",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-11-29T08:11:45.686-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/mgr-reserved-external-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "mgr-reserved-external-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/mgr-reserved-external-ip"
          }
        }
      ]
    },
    {
      "module": "module.mgr",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mgr_reserved_internal_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.132.0.33",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-11-29T08:11:56.676-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/mgr-reserved-internal-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "mgr-reserved-internal-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/mgr-reserved-internal-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default"
          }
        }
      ]
    },
    {
      "module": "module.mgr",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mgr_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/disks/ceph-mgr"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-mgr",
            "instance_id": "4625965928843762742",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "7qDHFEpnDWI=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update package lists\napt-get update\n\n# Install cephadm\nsudo apt install -y docker.io",
            "name": "ceph-mgr",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.199.12.216",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/networks/default",
                "network_ip": "10.132.0.33",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "sys-admin-project-402817"
              }
            ],
            "project": "sys-admin-project-402817",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-mgr",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ceph-nodes"
            ],
            "tags_fingerprint": "fE7w0wKG0kM=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.mgr.google_compute_address.mgr_reserved_external_ip",
            "module.mgr.google_compute_address.mgr_reserved_internal_ip"
          ]
        }
      ]
    },
    {
      "module": "module.mon",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mon_reserved_external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.77.39.61",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-11-29T08:11:56.661-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/mon-reserved-external-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "mon-reserved-external-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/mon-reserved-external-ip"
          }
        }
      ]
    },
    {
      "module": "module.mon",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mon_reserved_internal_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.132.0.30",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-11-29T08:11:45.694-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/mon-reserved-internal-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "mon-reserved-internal-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/mon-reserved-internal-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default"
          }
        }
      ]
    },
    {
      "module": "module.mon",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mon_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/disks/ceph-mon"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-mon",
            "instance_id": "5672935349082053687",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "4YD38-KxLaQ=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update package lists\napt-get update\n\n# Install cephadm\nsudo apt install -y cephadm docker.io",
            "name": "ceph-mon",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.39.61",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/networks/default",
                "network_ip": "10.132.0.30",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "sys-admin-project-402817"
              }
            ],
            "project": "sys-admin-project-402817",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-mon",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ceph-dashboard",
              "ceph-nodes"
            ],
            "tags_fingerprint": "04W3zrGbkhI=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.mon.google_compute_address.mon_reserved_external_ip",
            "module.mon.google_compute_address.mon_reserved_internal_ip"
          ]
        }
      ]
    },
    {
      "module": "module.osd",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "osd_reserved_external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.205.242.35",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-11-29T08:11:45.692-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/osd-reserved-external-ip-0",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "osd-reserved-external-ip-0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/osd-reserved-external-ip-0"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "35.187.27.91",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-11-29T08:11:45.704-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/osd-reserved-external-ip-1",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "osd-reserved-external-ip-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/osd-reserved-external-ip-1"
          }
        }
      ]
    },
    {
      "module": "module.osd",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "osd_reserved_internal_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "10.132.0.31",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-11-29T08:11:45.674-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/osd-reserved-internal-ip-0",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "osd-reserved-internal-ip-0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/osd-reserved-internal-ip-0",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "10.132.0.38",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-11-29T08:11:56.698-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/osd-reserved-internal-ip-1",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "osd-reserved-internal-ip-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/osd-reserved-internal-ip-1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default"
          }
        }
      ]
    },
    {
      "module": "module.osd",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "osd_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/disks/ceph-osd-data-disk-0"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/disks/ceph-osd-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-osd-0",
            "instance_id": "8965111069471857718",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "7qDHFEpnDWI=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update package lists\napt-get update\n\n# Install cephadm\nsudo apt install -y docker.io",
            "name": "ceph-osd-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.205.242.35",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/networks/default",
                "network_ip": "10.132.0.31",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "sys-admin-project-402817"
              }
            ],
            "project": "sys-admin-project-402817",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-osd-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ceph-nodes"
            ],
            "tags_fingerprint": "fE7w0wKG0kM=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.osd.google_compute_address.osd_reserved_external_ip",
            "module.osd.google_compute_address.osd_reserved_internal_ip",
            "module.osd.google_compute_disk.osd_data_disk"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/disks/ceph-osd-data-disk-1"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/disks/ceph-osd-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-osd-1",
            "instance_id": "6689402006073433142",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "7qDHFEpnDWI=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update package lists\napt-get update\n\n# Install cephadm\nsudo apt install -y docker.io",
            "name": "ceph-osd-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.187.27.91",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/networks/default",
                "network_ip": "10.132.0.38",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "sys-admin-project-402817"
              }
            ],
            "project": "sys-admin-project-402817",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-osd-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ceph-nodes"
            ],
            "tags_fingerprint": "fE7w0wKG0kM=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.osd.google_compute_address.osd_reserved_external_ip",
            "module.osd.google_compute_address.osd_reserved_internal_ip",
            "module.osd.google_compute_disk.osd_data_disk"
          ]
        }
      ]
    },
    {
      "module": "module.rbd",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "rbd_reserved_external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.140.96.221",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-11-29T08:11:45.688-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/rbd-reserved-external-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "rbd-reserved-external-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/rbd-reserved-external-ip"
          }
        }
      ]
    },
    {
      "module": "module.rbd",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "rbd_reserved_internal_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.132.0.28",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-11-29T08:11:45.689-08:00",
            "id": "projects/sys-admin-project-402817/regions/europe-west1/addresses/rbd-reserved-internal-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "rbd-reserved-internal-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sys-admin-project-402817",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/addresses/rbd-reserved-internal-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default"
          }
        }
      ]
    },
    {
      "module": "module.rbd",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "rbd_client_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/disks/ceph-rbd-client"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-rbd-client",
            "instance_id": "8056251519546874914",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "7qDHFEpnDWI=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update package lists\napt-get update\n\n# Install cephadm\nsudo apt install -y docker.io",
            "name": "ceph-rbd-client",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.140.96.221",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/global/networks/default",
                "network_ip": "10.132.0.28",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "sys-admin-project-402817"
              }
            ],
            "project": "sys-admin-project-402817",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sys-admin-project-402817/zones/europe-west1-b/instances/ceph-rbd-client",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ceph-nodes"
            ],
            "tags_fingerprint": "fE7w0wKG0kM=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.rbd.google_compute_address.rbd_reserved_external_ip",
            "module.rbd.google_compute_address.rbd_reserved_internal_ip"
          ]
        }
      ]
    }
  ]
}